[tool.poetry]
name = "task_1"
version = "0.1.0"
description = ""
authors = ["oogway93 <marklem.coding.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
SQLAlchemy = "^2.0.25"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
